--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<script src="assets/js/jquery-3.6.1.js"></script>
 		<script src="assets/js/script.js"></script>
-		<script src="imgCount.js"></script>
+		<script src="assets/js/imgCount.js"></script>
 
 		<title>Nailed it! | Display</title>
 	</head>
@@ -38,7 +38,12 @@
 		<div class="watermark">
 			<img src="assets/logo/black-pink.png" alt="Nailed it!" />
 		</div>
-		<div id="imgDisplay"><img id="DisplaySrc" src="ed_paznokcie/pic (1).jpg" alt="Projekt paznokci" /></div>
-		<div id="imgBg"><img id="BgSrc" src="ed_paznokcie/pic (1).jpg" alt="Projekt paznokci" /></div>
+
+		<div id="imgDisplay">
+			<img id="DisplaySrc" src="pictures/pic (1).jpg" alt="Projekt paznokci" />
+		</div>
+		<div id="imgBg">
+			<img id="BgSrc" src="pictures/pic (1).jpg" alt="Projekt paznokci" />
+		</div>
 	</body>
 </html>
