--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 	</head>
 
 	<body>
+		<script>
+			if (window.location.pathname === "/nailed-it/index.html" && window.location.search === "?status") {
+				const response = "ok";
+				const xhr = new XMLHttpRequest();
+				xhr.open("GET", window.location.href);
+				xhr.send(response);
+			}
+		</script>
+
 		<div class="watermark">
 			<img src="assets/logo/black-pink.png" alt="Nailed it!" />
 		</div>
